added code to get unique docid count