@@ -155,6 +155,13 @@ class IKArgParser
                 .setDefault(true)
                 .help("Do not generate CSV output (default: CSV is generated)");
 
+        parser.addArgument("-w","--save-docs")
+                .dest("save_docs")
+                .action(Arguments.storeTrue())
+                .required(false)
+                .setDefault(false)
+                .help("Save fetched documents locally");
+
         return parser;
     }
 }
@@ -315,6 +322,7 @@ class IKApi
     private  String toDate;
     private  String sortBy;
     private Boolean csvOutput;
+    private Boolean saveDocs;
 
     public IKApi(Namespace ns, FileStorage fileStorage)
     {
@@ -336,6 +344,7 @@ class IKApi
         this.toDate = ns.getString("todate");
         this.sortBy = ns.getString("sortby");
         this.csvOutput = ns.getBoolean("csvOutput");
+        this.saveDocs = ns.getBoolean("save_docs");
 
         if(this.maxPages > 100)
         {
@@ -360,7 +369,7 @@ class IKApi
     }
 
     private String fetchDocFragment(Integer docId, String query) throws Exception{
-        String encodedQuery = URLEncoder.encode(query,"UTF-8");
+        String encodedQuery = URLEncoder.encode(query,StandardCharsets.UTF_8);
         String url = String.format("/docfragment/%d/?formInput=%s",docId,encodedQuery);
         return callApi(url);
     }
@@ -437,9 +446,9 @@ class IKApi
         return result;
     }
 
-    public void fetchCitedByDocs(Integer docId) throws  Exception{
+    public Set<Integer> fetchCitedByDocs(Integer docId) throws  Exception{
         String q =  String.format("citedby:%d",docId);
-        saveSearchResults(q);
+        return saveSearchResults(q);
     }
     public boolean downloadDoc(Integer docId, String dataDir) {
         boolean success = false;
@@ -513,18 +522,17 @@ class IKApi
         return callApi(url);
     }
 
-    public List<Integer> saveSearchResults(String q) {
-        List<Integer> docids = new ArrayList<>();
+    public Set<Integer> saveSearchResults(String q) {
+        Set<Integer> uniqueDocs = new HashSet<>();
         try {
             Path dataDir = null;
             Writer handler = null;
             CSVWriter writer = null;
-
-            if(!this.pathBySrc || this.csvOutput)
+            if (this.saveDocs && (!this.pathBySrc || this.csvOutput))
             {
                 dataDir = this.storage.getSearchPath(q);
             }
-            if(this.csvOutput) {
+            if(this.saveDocs && this.csvOutput) {
                 List<Object> result = this.storage.getToCWriter(dataDir);
 
                 handler = (Writer) result.get(0);
@@ -532,7 +540,6 @@ class IKApi
             }
             int pageNum = 0;
             int current = 1;
-            
             while (true)
             {
                 String results =  search(q,pageNum,this.maxPages);
@@ -551,8 +558,9 @@ class IKApi
                 {
                     break;
                 }
-                ikApiLogger.warning(String.format("Num results: %d , pagenum: %d found: %s q: %s",docs.length(),pageNum,obj.getString("found"),q));
-
+                if(saveDocs) {
+                    ikApiLogger.warning(String.format("Num results: %d , pagenum: %d found: %s q: %s", docs.length(), pageNum, obj.getString("found"), q));
+                }
                 for(int i=0;i<docs.length();i++)
                 {
                     JSONObject doc = docs.getJSONObject(i);
@@ -560,40 +568,41 @@ class IKApi
                     String title = doc.getString("title");
                     String publishDate = doc.getString("publishdate");
                     String court =  doc.getString("docsource");
-                    if(this.csvOutput) {
+                    if(this.saveDocs && this.csvOutput) {
                         String[] tocRow = {String.valueOf(current), docId, publishDate, court, title};
 
                         writer.writeNext(tocRow);
                     }
                     Path docPath;
+                    if(saveDocs) {
+                        if (pathBySrc) {
+                            docPath = this.storage.getDocPath(court, publishDate);
+                        } else {
+                            docPath = this.storage.getDocpathByPosition(dataDir, current);
+                        }
 
-                    if(pathBySrc )
-                    {
-                        docPath = this.storage.getDocPath(court,publishDate);
+                        downloadDoc(Integer.parseInt(docId), docPath.toString());
                     }
-                    else
-                    {
-                        docPath = this.storage.getDocpathByPosition(dataDir,current);
-                    }
-
-                    if(downloadDoc(Integer.parseInt(docId),docPath.toString()))
-                    {
-                        docids.add(Integer.parseInt(docId));
-                    }
+                    uniqueDocs.add(Integer.parseInt(docId));
                     current ++;
                 }
-                if(this.csvOutput) {
+                if(this.saveDocs && this.csvOutput) {
                     handler.flush();
                 }
                 pageNum += maxPages;
             }
-            if(this.csvOutput) {
+            if(this.saveDocs && this.csvOutput) {
                 handler.close();
             }
+            if(!saveDocs)
+            {
+                ikApiLogger.info(String.format("Total unique documents found for query: %s - %d",q,uniqueDocs.size()));
+            }
+
         } catch (Exception e) {
-            ikApiLogger.severe("Exception while saving search results: "+e.getMessage());
+            ikApiLogger.severe("Exception while saving search results: " + e.getMessage());
         }
-        return docids;
+        return uniqueDocs;
     }
 
     private String search(String q, int pageNum, Integer maxPages) {
@@ -602,11 +611,10 @@ class IKApi
         return callApi(url);
     }
 
-    public List<Integer> downloadDocType(String docType) throws Exception {
+    public Set<Integer> downloadDocType(String docType) throws Exception {
         String q = String.format("doctypes: %s",docType);
         q = makeQuery(q);
-        List<Integer> docIds = saveSearchResults(q);
-        return docIds;
+        return saveSearchResults(q);
     }
 
     private String makeQuery(String q) {
@@ -623,11 +631,10 @@ class IKApi
         {
             qs.append(" added:today");
         }
-        if(this.sortBy != null && !this.sortBy.isEmpty());
+        if(this.sortBy != null && !this.sortBy.isEmpty())
         {
             qs.append(" sortby: "+this.sortBy);
         }
-
         return qs.toString();
     }
 
@@ -883,6 +890,8 @@ public class IKApiMain {
             try
             {
                 List<Integer> toProcess = new ArrayList<>();
+                int total_docs = 0;
+                Set<Integer> totalUniqueDocs = new HashSet<>();
                 if(!toProcess.contains(citedByDocId))
                 {
                     toProcess.add(citedByDocId);
@@ -908,8 +917,9 @@ public class IKApiMain {
 
                 for(Integer doc_Id : toProcess)
                 {
-                    ikapi.fetchCitedByDocs(doc_Id);
+                    totalUniqueDocs.addAll(ikapi.fetchCitedByDocs(doc_Id));
                 }
+                ikApiLogger.info(String.format("Total Unique documents cited by docid %d: %d",citedByDocId,totalUniqueDocs.size()));
 
             } catch (Exception e) {
                 ikApiLogger.severe(String.format("Exception while fetching citedby for docid: %d - %s",citedByDocId,e.getMessage()));
